# MathToolbox

./: .gitignore  CMakeLists.txt  Doxyfile  Math.sln  MathToolbox.sln  MathToolbox.sln.DotSettings  Point2.cpp  Point2.h  README.md  Toolbox++.cpp  Toolbox++.lnk  Toolbox++.sln  Toolbox++.vcxproj  Toolbox++.vcxproj.filters  Vector2.cpp  Vector2.h  main.cpp  toolbox.idb
Dynamic/: Dynamic.vcxproj
Dynamic/src/Math/: calc.hpp  easing.cpp  quaternion.cpp  vector2i.cpp  vector4.cpp  vector4.hpp
MathToolbox/: CMakeLists.txt  MathToolbox.vcxproj  MathToolbox.vcxproj.filters  Toolbox++.vcxproj.filters  doxygen_config
MathToolbox/include/: calc.hpp  definitions.hpp  easing.hpp  math.hpp  matrix.hpp  matrix2x2.hpp  matrix3.hpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  vector2.hpp  vector2i.hpp  vector3.hpp  vector4.hpp
MathToolbox/include/Maths/: calc.hpp  matrix.hpp  matrix2.hpp  matrix3.hpp  vector2.hpp
MathToolbox/src/: calc.cpp  easing.cpp  matrix.cpp  matrix2x2.cpp  matrix3.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp  vector2.cpp  vector2i.cpp  vector3.cpp  vector4.cpp
MathToolbox/src/Math/: Calc.cpp  Calc.ixx  Easing.cpp  Easing.ixx  MathTypes.ixx  Matrix.cpp  Matrix.ixx  Matrix2.cpp  Matrix2.ixx  Matrix3.cpp  Matrix3.ixx  Quaternion.cpp  Quaternion.ixx  Vector2.cpp  Vector2.ixx  Vector2i.cpp  Vector2i.ixx  Vector3.cpp  Vector3.ixx  Vector4.cpp  Vector4.ixx  calc.cpp  easing.hpp  matrix2.cpp  matrix3.cpp  vector2.hpp  vector3.cpp  vector3.hpp
MathToolbox/src/Maths/: calc.cpp  easing.cpp  matrix.cpp  matrix2.cpp  matrix3.cpp  quaternion.cpp  vector2.cpp  vector2i.cpp  vector3.cpp  vector4.cpp
MathToolbox_Tests/: MathToolbox_Tests.vcxproj  main.cpp
Static/: Static.vcxproj  Static.vcxproj.filters
Tests/: CMakeLists.txt  Tests.vcxproj  pch.h  pch.hpp  test.cpp
Toolbox++/: README.md  Toolbox++.sln  Toolbox++.vcxproj  Toolbox++.vcxproj.filters  setup.py
Toolbox++/include/: calc.hpp  matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  toolbox.i  vector.hpp  vector2.hpp  vector2i.hpp  vector3.hpp  vector4.hpp
Toolbox++/src/: calc.cpp  matrix.cpp  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp  vector.cpp  vector2.cpp  vector2i.cpp  vector3.cpp  vector4.cpp
Toolbox++/wraps/: toolbox.py  toolbox_wrap.cxx
Toolbox++_Tests/: Toolbox++_Tests.vcxproj  main.cpp
src/: CMakeLists.txt
src/Math/: calc.hpp  core.hpp  easing.cpp  easing.hpp  math.hpp  matrix.cpp  matrix.hpp  matrix2.hpp  matrix3.hpp  quaternion.cpp  quaternion.hpp  vector2.cpp  vector2.hpp  vector2i.cpp  vector2i.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
tests/: CMakeLists.txt
unit_tests/: CMakeLists.txt  test.cpp
